manifests/immich/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.middlewares: immich-strip-api-prefix@kubernetescrd
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: immich
spec:
  rules:
  - host: photos.seymour.family
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: immich-server
            port:
              number: 3001
  tls:
  - hosts:
    - photos.seymour.family
    secretName: immich-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: immich-web
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
  labels:
    app.kubernetes.io/instance: immich
    app.kubernetes.io/name: immich
spec:
  rules:
  - host: photos.seymour.family
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: immich-web
            port:
              number: 3000
  tls:
  - hosts:
    - photos.seymour.family
    secretName: immich-tls
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: immich
spec:
  stripPrefix:
    forceSlash: false
    prefixes:
      - /api
